--- a/frontend-edumeet/src/index.css
+++ b/frontend-edumeet/src/index.css
@@ -14,3 +14,9 @@
     @apply text-[16px] tracking-[-0.03em] text-p5;
   }
 }
+
+@layer utilities {
+  .container {
+    @apply mx-auto max-w-[1252px] px-16 max-xl:px-10 max-lg:px-6 max-sm:px-4;
+  }
+}
