--- a/00_frontend-edumeet/src/index.css
+++ b/00_frontend-edumeet/src/index.css
@@ -21,6 +21,14 @@
   .container {
     @apply mx-auto max-w-[1252px] px-16 max-xl:px-10 max-lg:px-6 max-sm:px-4;
   }
+
+  .faq-icon {
+    @apply before:absolute before:h-0.5 before:w-3 before:bg-[#000000] before:content-[''] after:absolute after:h-0.5 after:w-3 after:rotate-90 after:bg-[#1d1d1d] after:transition-all after:duration-500 after:content-[''];
+  }
+
+  .small-compact {
+    @apply text-[12px] font-semibold leading-[18px] tracking-[0.03em];
+  }
 }
 
 .code-border {
@@ -72,4 +80,30 @@
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.14);
+}
+
+.glass-bg {
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+}
+
+/* Dotted Line for Timeline Connection */
+.dotted-line {
+  border-left: 2px dotted rgba(156, 81, 224, 0.7); /* Light purple dotted line */
+}
+
+.home_bg {
+  background-image: url("./assets/images/yellow-check.png");
+}
+
+/***************** FAQ ********************/
+.g5 {
+  background: linear-gradient(#337969, #55b2c9);
+}
+
+.g4 {
+  background: linear-gradient(#b4bf73, #a08d70);
 }
