--- a/00_frontend-edumeet/src/index.css
+++ b/00_frontend-edumeet/src/index.css
@@ -29,6 +29,10 @@
   .small-compact {
     @apply text-[12px] font-semibold leading-[18px] tracking-[0.03em];
   }
+
+  .card {
+    @apply bg-white p-10 border border-[#222222]/10 rounded-3xl shadow-[0_7px_14px_#EAEAEA] max-w-xs w-full;
+  }
 }
 
 .code-border {
